--- a/pemFioi/components/earth3d/test.html
+++ b/pemFioi/components/earth3d/test.html
@@ -163,18 +163,23 @@
 		<textarea id="labels" style="width: 100%; height: 260px">
 [
 	{
-		"text": "Label text 1",
+		"text": "1",
 		"lat": 54.326965,
 		"lng": 48.423763
 	},
 	{
-		"text": "Label text 2",
+		"text": "2222",
 		"lat": 25,
 		"lng": 40
 	},
 	{
-		"text": "Label text 3",
+		"text": "3333 3333 33333",
 		"lat": -5,
+		"lng": 20
+	},
+	{
+		"text": "44444444 44444444 44444444 44444444",
+		"lat": -25,
 		"lng": 20
 	}
 ]			
