--- a/pemFioi/taskStyles-0.2_M.css
+++ b/pemFioi/taskStyles-0.2_M.css
@@ -298,11 +298,12 @@ h1 .stars {
    border-radius: 8px;
    text-align: justify;
 }
-#popupMessage.noAvatar img.beaver, #popupMessage.noAvatar.messageArrow {
+#popupMessage.noAvatar img.beaver, #popupMessage.noAvatar img.messageArrow {
    display: none;
 }
 #popupMessage.noAvatar .message {
    margin-left: 0px;
+   border: none;
 }
 #popupMessage p {
    margin: .5em 0 0;
