--- a/pemFioi/components/map2d/styles.css
+++ b/pemFioi/components/map2d/styles.css
@@ -15,15 +15,21 @@
     z-index: 10;
 }
 
+.map2d canvas.editor {
+    position: absolute;
+    z-index: 20;
+}
+
 .map2d .toolbar {
     position: absolute;
     top: 10px;
     left: 10px;
+    right: 45px;
     z-index: 30;
 }
 
 .map2d .toolbar .group {
-    margin-right: 10px;
+    margin: 0 10px 5px 0;
     float: left;
 }
 
@@ -58,7 +64,7 @@
 .map2d .zoom {
     position: absolute;
     z-index: 30;
-    bottom: 10px;
+    top: 10px;
     right: 10px;   
 }
 
@@ -74,6 +80,10 @@
 
 .map2d .zoom .button:hover {
     background: #ddd;
+}
+
+.map2d .zoom .button-disabled {
+    color: #ccc;
 }
 
 .map2d .zoom .button:first-child {
