--- a/pemFioi/components/map2d/test.html
+++ b/pemFioi/components/map2d/test.html
@@ -27,41 +27,47 @@
                 url: 'map_lowres.jpg',
                 //url: 'map.jpg',
                 zoom: 1,
-/*
+
                 figures: [
                     { 
                         type: 'point',
-                        data: { x: 25, y: 25 }
+                        points: [
+                            { x: 25, y: 50 }
+                        ]
                     },
                     { 
                         type: 'point',
-                        data: { x: 25, y: 50 }
+                        points: [
+                            { x: 25, y: 75 }
+                        ]
                     },
                     { 
                         type: 'point',
-                        data: { x: 25, y: 50 }
+                        points: [
+                            { x: 25, y: 100 }
+                        ]
                     },
                     {
                         type: 'line',
-                        data: [
-                            { x: 50, y: 25 },
-                            { x: 75, y: 50 },
-                            { x: 100, y: 20 },
-                            { x: 125, y: 50 },
-                            { x: 150, y: 25 }
+                        points: [
+                            { x: 50, y: 50 },
+                            { x: 75, y: 75 },
+                            { x: 100, y: 50 },
+                            { x: 125, y: 75 },
+                            { x: 150, y: 50 }
                         ]
                     },
                     {
                         type: 'area',
-                        data: [
-                            { x: 100, y: 75 },
-                            { x: 125, y: 100 },
-                            { x: 150, y: 100 },
-                            { x: 175, y: 75 },
+                        points: [
+                            { x: 100, y: 125 },
+                            { x: 125, y: 150 },
+                            { x: 150, y: 150 },
+                            { x: 175, y: 125 },
                         ]
                     }
                 ]                
-                */
+
             });
         </script>
     </body>
