--- a/pemFioi/components/map2d/test.html
+++ b/pemFioi/components/map2d/test.html
@@ -33,19 +33,22 @@
                         type: 'point',
                         points: [
                             { x: 25, y: 50 }
-                        ]
+                        ],
+                        name: 'Point 1'
                     },
                     { 
                         type: 'point',
                         points: [
                             { x: 25, y: 75 }
-                        ]
+                        ],
+                        name: 'Point 2'
                     },
                     { 
                         type: 'point',
                         points: [
                             { x: 25, y: 100 }
-                        ]
+                        ],
+                        name: 'Point 3'
                     },
                     {
                         type: 'line',
@@ -55,7 +58,8 @@
                             { x: 100, y: 50 },
                             { x: 125, y: 75 },
                             { x: 150, y: 50 }
-                        ]
+                        ],
+                        name: 'Line 1'
                     },
                     {
                         type: 'area',
@@ -64,7 +68,8 @@
                             { x: 125, y: 150 },
                             { x: 150, y: 150 },
                             { x: 175, y: 125 },
-                        ]
+                        ],
+                        name: 'Area 1'
                     }
                 ]                
 
