--- a/pemFioi/components/map2d/test.html
+++ b/pemFioi/components/map2d/test.html
@@ -32,21 +32,21 @@
                     { 
                         type: 'point',
                         points: [
-                            { x: 25, y: 50 }
+                            { x: 225, y: 50 }
                         ],
                         name: 'Point 1'
                     },
                     { 
                         type: 'point',
                         points: [
-                            { x: 25, y: 75 }
+                            { x: 225, y: 75 }
                         ],
                         name: 'Point 2'
                     },
                     { 
                         type: 'point',
                         points: [
-                            { x: 25, y: 100 }
+                            { x: 225, y: 100 }
                         ],
                         name: 'Point 3'
                     },
@@ -68,6 +68,16 @@
                             { x: 125, y: 150 },
                             { x: 150, y: 150 },
                             { x: 175, y: 125 },
+                        ],
+                        name: 'Area 1'
+                    },
+                    {
+                        type: 'area',
+                        points: [
+                            { x: 300, y: 125 },
+                            { x: 300, y: 150 },
+                            { x: 350, y: 150 },
+                            { x: 350, y: 125 },
                         ],
                         name: 'Area 1'
                     }
