--- a/pemFioi/components/gaps-table/tests/test-prefilled.html
+++ b/pemFioi/components/gaps-table/tests/test-prefilled.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="../../../../ext/jquery/2.1/jquery.min.js"></script>
         <script type="text/javascript" src="../../../../ext/jquery-ui/1.10/jquery-ui-1.10.3.custom.min.js"></script>
         <script src="../component.js"></script>
-        <link href="../component.css" rel="stylesheet">
+        <link href="../styles.css" rel="stylesheet">
         <style>
             html, 
             body {
@@ -34,9 +34,9 @@
             ]
 
             var valid = [
-                ['', '', 'ccc1'],
-                ['aaa2', 'bbb2', 'ccc2'],
-                ['aaa3', 'bbb3', '']
+                ['', '', 'cell C1'],
+                ['cell A2', 'cell B2', 'cell C2'],
+                ['cell A3', 'cell B3', '']
             ]
 
 
