--- a/pemFioi/components/gaps-table/styles.css
+++ b/pemFioi/components/gaps-table/styles.css
@@ -16,9 +16,14 @@
     margin: 0 10px 0 0;
 }
   
+.gaps-table .table-container {
+    display: inline-block;
+    margin-top: 20px;
+    border: 1px dotted #000;
+}
 
 .gaps-table table {
-    margin-top: 20px;
+    margin: 5px;
 }
 
 .gaps-table table td {
