--- a/pemFioi/components/gaps-table/styles.css
+++ b/pemFioi/components/gaps-table/styles.css
@@ -26,12 +26,16 @@
     margin: 5px;
 }
 
+.gaps-table table th {
+    background: #CCC;
+}
+
+.gaps-table table th,
 .gaps-table table td {
     min-width: 60px;
     padding: 0;
     padding: 5px;
     text-align: center;        
-
 }
  
 .gaps-table table .placeholder {
