--- a/pemFioi/components/gaps-table/tests/test.html
+++ b/pemFioi/components/gaps-table/tests/test.html
@@ -29,9 +29,9 @@
 
         <script type="text/javascript">
             var valid = [
-                ['', '', 'cell C1'],
+                ['cell A1', 'cell B1', 'cell C1'],
                 ['cell A2', 'cell B2', 'cell C2'],
-                ['cell A3', 'cell B3', '']
+                ['cell A3', 'cell B3', 'cell C3']
             ]
 
             var table = GapsTable({
