--- a/pemFioi/components/gaps-table/tests/test.html
+++ b/pemFioi/components/gaps-table/tests/test.html
@@ -28,15 +28,22 @@
         <div id="msg"></div>
 
         <script type="text/javascript">
-            var valid = [
-                ['cell A1', 'cell B1', 'cell C1'],
-                ['cell A2', 'cell B2', 'cell C2'],
-                ['cell A3', 'cell B3', 'cell C3']
-            ]
-
             var table = GapsTable({
                 parent: $('#table'),
-                valid: valid
+                tables: [
+                    {
+                        values: [
+                            ['cell A1', 'cell B1', 'cell C1'],
+                            ['cell A2', 'cell B2', 'cell C2'],
+                        ]
+                    },
+                    {
+                        values: [
+                            ['cell A1', 'cell B1', 'cell C1'],
+                            ['cell A2', 'cell B2', 'cell C2'],
+                        ]
+                    }                    
+                ]
             });
 
 
